# QTProjects

Calculator/: CMakeLists.txt  Main.qml  main.cpp
ControllerProject/: AnchorController.qml  CMakeLists.txt  ClickableImage.qml  Main.qml  PositionController.qml  main.cpp
contactlist/: CMakeLists.txt  ContactView.qml  EditContactView.qml  Main.qml  NewContactView.qml  Popup.qml  contactlist.h  contactlistmodel.cpp  contactlistmodel.h  main.cpp  mylistmodel.cpp  mylistmodel.h  read.txt
contactlist/android/: AndroidManifest.xml  build.gradle  gradle.properties  local.properties
contactlist/android/src/com/contactlist/: ContactsTask.java  MainActivity.java  TaskRunner.java
contactlist/contactlist/: EditContactView.qml  Main.qml  NewContactView.qml  contactlist.cpp  mylistmodel.cpp  mylistmodel.h
contactlist/contactlist/android/src/com/contactlist/: MainActivity.java
tasklist/: CMakeLists.txt  Main.qml  NewTask  NewTaskView.qml  Task.qml  main.cpp  mylistitem.cpp  mylistitem.h  mylistmodel.cpp  mylistmodel.h
